--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 	<!--Section five with Job information-->
 
 	<div id="Jobs">
-		<img class="overviewimg" src="overview.jpg">
+		<img class="overviewimg" src="Overview.jpg">
 			<div class="overviewsquare"></div>
 				<div class="container5">
 					<p class="jobs" id="jobs1">
